# lc-experiments

./: .agda-lib  .gitignore  Addr.agda  Bench.hs  Containers.agda  Debug.hs  IORef.agda  LAM.agda  LAM.cabal  LAM.hs  LAM2.agda  LAMDB.hs  LAMDB2.hs  LAMDB3.hs  LAMDBB.hs  LC.agda  LICENSE  Main.hs  Parse.agda  Pretty.agda  README.md  Test.hs  Util.hs  Utils.agda
.github/workflows/: haskell.yml
Bench/: Bench.hs  Scott.hs  Unary.hs
Debug/: Main.hs
LAM/: Base.agda  Base.hs  IsDBEnv.hs  Parse.hs  Print.hs  Test.hs  Trim.hs
LAM/Exec/: DBNoTrimEff.hs  DBNoTrimPure.hs  DBNoTrimPure2.hs  NamedNoTrimPure.hs
LC/: Base.agda  Parse.agda
Test/: Test.hs
Test/LAM/: Test.hs
Test/LAM/Exec/: Test.hs
Trie/: IntMap.hs
Utils/: Trie.agda
src/: Addr.hs  Util.hs
src/LAM/: Base.hs  CanTrim.hs  IsDBEnv.hs  IsLAM.hs  Opt.hs  Parse.hs  Print.hs  Pure.hs  Trim.hs
src/LAM/Exec/: DBNoTrimEff.hs  DBNoTrimPure.hs  DBNoTrimPure2.hs  DBTrimPure.hs  NamedNoTrimPure.hs
src/LAM/Types/: BV.hs  Generic.hs  Pure.hs
src/LC/: Base.hs  Parse.hs
src/Trie/: BS.hs  HashMap.hs  Map.hs
