cabal-version:      3.0
name:               LAM
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

license:            MIT
license-file:       LICENSE
author:             whatisRT
maintainer:         andre.knispel@gmx.de

-- A copyright notice.
-- copyright:
build-type:         Simple
-- extra-doc-files:    CHANGELOG.md

-- Extra source files to be distributed with the package, such as examples, or a tutorial module.
-- extra-source-files:

common warnings
    ghc-options: -Wall -Wno-unused-matches -Wno-missing-signatures -Wno-unused-imports
                 -Wno-name-shadowing -Wno-orphans

common deps
    build-depends: base
                 , containers
                 , mtl
                 , parsec
                 , text
                 , vector

common exts
    default-extensions: RankNTypes
                      , LambdaCase
                      , OverloadedStrings
                      , MultiWayIf
                      , DeriveFoldable
                      , DeriveTraversable
                      , DeriveFunctor
                      , DeriveGeneric
                      , TypeSynonymInstances
                      , FlexibleInstances
                      , FlexibleContexts
                      , TupleSections
                      , MultiParamTypeClasses
                      , BlockArguments
                      , PatternSynonyms
                      , TypeFamilies
                      , TypeOperators
                      , StandaloneDeriving
    default-language: Haskell2010

library
    import: warnings, deps, exts
    hs-source-dirs: src
    exposed-modules: Addr
                   , LAM.Base
                   , LAM.CanTrim
                   , LAM.Exec.DBNoTrimPure
                   , LAM.Exec.DBTrimPure
                   , LAM.Exec.NamedNoTrimPure
                   , LAM.IsDBEnv
                   , LAM.IsLAM
                   , LAM.Opt
                   , LAM.Parse
                   , LAM.Pure
                   , LAM.Trim
                   , LAM.Types.BV
                   , LAM.Types.Generic
                   , LAM.Types.Pure
                   , LC.Base
                   , LC.Parse
                   , Trie.Map
                   , Util

executable Debug
    import: deps, exts
    main-is: Main.hs
    build-depends: LAM
    hs-source-dirs: Debug

test-suite Test
    import: deps, exts
    main-is: Test.hs
    other-modules: LAM.Test , LAM.Exec.Test
    type: exitcode-stdio-1.0
    build-depends: LAM
                 , QuickCheck
    hs-source-dirs: Test

benchmark Bench
    import: deps, exts
    type: exitcode-stdio-1.0
    main-is: Bench.hs
    other-modules: Unary, Scott
    build-depends: LAM
                 , criterion
    hs-source-dirs: Bench
